fix some spacing

--- a/app/pages/root/topics/criterion.sass
+++ b/app/pages/root/topics/criterion.sass
@@ -1,4 +1,7 @@
 .tag
+  @apply mr-2
+  &:last-child
+    @apply mr-0
   &:after
     content: "/"
     @apply ml-2 text-grey-dark
